validator-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator-front
  labels:
    app: validator-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: validator-front
  template:
    metadata:
      labels:
        app: validator-front
    spec:
      containers:
      - name: validator-front
        image: 992122884453.dkr.ecr.eu-west-1.amazonaws.com/jumia-phone-validator-front:xxx
        imagePullPolicy: Always
        limits:
        ports:
        - containerPort: 8080
