validator-front/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-validator-front
spec:
    type: ClusterIP
    ports:
        - name: http
          port: 80
          targetPort: 8081
          protocol: TCP
    selector:
        app: deployment-validator-front
