validator-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-validator-front
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: validator-front.boquetas.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service-validator-front
                port:
                  number: 8081
